<resources>
    <string name="app_name"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_hint_password">Пароль</string>
    <string name="log_in_hint_email">Email</string>
    <string name="sign_in_hint_name">Имя</string>
    <string name="sign_in_hint_last_name">Фамилия</string>
    <string name="log_in_button_sign_in">Регистрация</string>
    <string name="log_in_button_log_in">Войти</string>
    <string name="log_in_error_password">Неверный логин и/или пароль</string>
    <string name="no_asses_to_sign_in">К сожалению, регистрация новых пользователей ещё не доступна</string>
    <string name="back">Назад</string>
    <string name="sign_in_title_for_sign_in">Регистрация</string>
    <string name="sign_in_text_for_sign_in">Для продолжения введите корректные данные</string>
    <string name="title_2">Органические, искуственные и переработанные ткани.</string>
    <string name="description_to_title_1">Почему так важно сортировать мусор?</string>
    <string name="description_to_title_2">Описание темы 2</string>
    <string name="text_label_arcticles">Статьи</string>
    <string name="text_label_map">Карта</string>
    <string name="text_label_profile">Профиль</string>
    <string name="choose_location">Выберите город</string>
    <string name="choose_location_hint">Город</string>
    <string name="next">Продолжить</string>
    <string name="go">Зарегистрироваться</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="have_no_account">Нет аккаунта?</string>
    <string name="log_out">Выйти из аккаунта</string>
    <string name="fab_content_desc">Добавить метку</string>
    <string name="apply">Применить</string>
    <string name="cancel">Отменить</string>
    <string name="title_1">Для нашей страны в настоящий момент сортировка отходов – дело проблемное.

Люди не знают, как правильно разделять мусор и для чего это делать.

Между тем правильная утилизация и сортировка отходов способны решить множество экологических и финансовых задач.

Страны Европы и Америки давно практикуют разделение мусора. Как результат – отличная экологическая обстановка, дешёвое вторсырьё сохранение природных богатств. В общем, наши западные товарищи научились беречь ресурсы и извлекать выгоду с помощью разделения мусора. Так, на первый взгляд безвредная батарейка засоряет  20м² земли и около 400 л воды. Ртутный градусник содержит 1-2 грамма ртути, испарения которой опасны для человека. Если градусник разбить, концентрация этого ядовитого вещества в комнате превысит допустимую норму в 1000 раз.

Подобные отходы не подлежат переработке, их попросту уничтожат на специальном заводе. Сортировка мусора поможет защититься от вредного воздействия таких веществ, ведь благодаря ей они не попадут на свалку, а будут утилизированы надлежащим способом.
    Всё просто: собрал – привёз на пункт приёма – получил деньги.

К примеру, за 1 кг макулатуры можно заработать от 5 до 40 рублей в зависимости от качества бумаги. Минимальная цена за 1 кг алюминиевых банок — 45-50 рублей. За 1 кг пластиковых бутылок можно получить 8-10 рублей, стеклянных бутылок — 3-5 рублей.

Разделяя отходы, мы получаем дополнительный доход.</string>
    <string name="add_problem_window_hint_title">Описание проблемы</string>

    <string name="title_11">Знаешь, какой товар самый продаваемый в супермаркетах? Это пакет. Да, простой полиэтиленовый пакет, в который ты складываешь покупки, чтобы отнести их домой.</string>
    <string name="title_12"> Ежегодно в России каждый человек использует 181 пластиковый пакет – это 26.5 миллиардов пакетов по всей стране, что составляет 5% мирового потребления. Люди во всем мире тратят 500 миллиардов пакетов в год. А ведь полиэтиленовые пакеты разлагаются от 700 до 1000 лет, отравляя при этом окружающую среду ядовитыми газами и микропластиком. Используя пакеты, мы убиваем животных и птиц, поскольку пакеты попадают в их желудки, загрязняем прибрежные территории и забиваем собственные канализации, вызывая наводнения.</string>
    <string name="title_13">Кажется, что компостируемые и перерабатываемые бумажные пакеты могут решить проблему, но на самом деле это не так:</string>
    <string name="title_14">производство бумажных пакетов загрязняет воздух на 70% сильнее, чем производство пластиковых</string>
    <string name="title_15">загрязнение воды при производстве пакетов из бумаги в 50 раз больше, чем при производстве пластиковых</string>
    <string name="title_16">Но что же делать, если никакие пакеты не подходят? Как всегда – отказываться от одноразового. Выбирайте авоськи, шопперы и мешочки для фруктов и круп:</string>
    <string name="title_17">они многоразовые и надежные, не порвутся (а с пластиковыми пакетами такое иногда случается!) и выдержат все твои покупки</string>
    <string name="title_18">это стильно: дизайнеры создают классные расцветки и принты для шопперов, поэтому они смогут дополнить твой образ и подчеркнуть индивидуальнос</string>
    <string name="title_19">Благодарим ассоциацию "ЭкоШколы России" за предоставленные статьи</string>
    <string name="title_20">https://vk.com/ecoschoolhse</string>
    <string name="title_100">Экологичные материалы</string>
    <string name="title_101">Органические ткани, искусственные ткани, переработанные ткани - наверняка вы встречались с этими ярлычками в магазинах одежды, но знаете ли вы, что они обозначают? Давайте разбираться вместе! </string>
    <string name="title_102">Искусственные ткани</string>
    <string name="title_103">Производство таких тканей происходит искусственным путём из природного сырья. Например, сырьем для вискозы является растительная целлюлоза: сначала древесину растворяют щелочью, а затем создают волокна. Ещё одной искусственной тканью является лиоцелл или тенсел, который производится из эвкалипта и обладает антибактериальным эффектом (эвкалипт - природный антисептик). </string>
    <string name="title_105">Органические ткани</string>
    <string name="title_106">Такие ткани производятся без использования химических веществ и пестицидов. Например, органический хлопок выращивается из генетически не модифицированных семян без применения синтетических удобрений, а на созревшие коробочки хлопка не распыляются яды для сбрасывания листвы и облегчения процессов сбора. Шерсть, собираемая с овец, тоже может быть органической: это значит, что овцы не подкармливаются химическими добавками - стимуляторами роста.</string>
    <string name="title_107">Переработанные ткани</string>
    <string name="title_108">Производство таких тканей как полиэстер и нейлон требует использования нефтепродуктов, поэтому мы не можем назвать его экологичным. Но такие ткани тоже могут быть эко-фрэндли! Для этого они должны быть переработанными, например из полимеров, используемых при производстве пластиковых бутылок. Переработанные ткани не уступают по своим характеристикам обычному полиэстеру и нейлону, а также требует в 3 раза меньше энергии для производства.</string>
    <string name="title_109">Крупные торговые сети (Reserved, Zara, Pangaia) уже используют такие ткани в производствах. Следующий шаг за нами - подходить осознанно к формированию гардероба и выбирать то, что действительно экологично</string>
    <string name="checkBoxDeleteMarker">Я подтверждаю, что хочу удалить метку</string>
    <string name="checkBoxCheckInfo">Я подтверждаю, что проблема была решена</string>
    <string name="delete_marker_button">Удалить метку</string>
    <string name="delete_marker_title">Удаление метки</string>
    <string name="delete_marker_description">Удалите эту метку, если проблема была решена.</string>
    <string name="top_title">Описание проблемы</string>

</resources>